--- a/demo-mq-kafka-two/pom.xml
+++ b/demo-mq-kafka-two/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-mq-kafka</artifactId>
+    <artifactId>demo-mq-kafka-two</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>demo-mq-kafka</name>
+    <name>demo-mq-kafka-two</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -68,7 +68,7 @@
     </dependencies>
 
     <build>
-        <finalName>demo-mq-kafka</finalName>
+        <finalName>demo-mq-kafka-two</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
