--- a/demo-mq-kafka-two/src/main/resources/application.yml
+++ b/demo-mq-kafka-two/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8081
+  port: 8080
   servlet:
     context-path: /demo
 spring:
   application:
     # 定义项目名称
-    name: feiyilinDemo1
+    name: feiyilinDemo
   cloud:
     nacos:
       discovery:
