--- a/demo-mq-kafka-two/src/main/resources/application.yml
+++ b/demo-mq-kafka-two/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
-    context-path: /demo
+    context-path: /demo2
 spring:
   application:
     # 定义项目名称
-    name: feiyilinDemo
+    name: feiyilinDemo2
   cloud:
     nacos:
       discovery:
