添加demo-mq-kafka-base模块

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>demo-pay</module>
         <module>demo-java-base</module>
         <module>demo-mq-kafka-two</module>
+        <module>demo-mq-kafka-base</module>
     </modules>
     <packaging>pom</packaging>
 
