--- a/demo-helloworld/pom.xml
+++ b/demo-helloworld/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>hutool-all</artifactId>
 		</dependency>
         <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache</groupId>
             <artifactId>run-base-consumer-sdk</artifactId>
             <version>1.0.0-SNAPSHOT</version>
